# tsp-optimization-lab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
algorithms/: __init__.py
algorithms/ant_colony/: __init__.py  ant.py  colony.py  config.py  pheromone.py  solver.py
algorithms/genetic/: __init__.py  config.py  crossover.py  mutation.py  population.py  reproduction.py  selection.py  solver.py
algorithms/hybrid/: __init__.py  config.py  refinement.py  solver.py
algorithms/nearest_neighbor/: __init__.py  config.py  solver.py
algorithms/two_opt/: __init__.py  config.py  moves.py  solver.py
app/: cli.py  options.py
core/: __init__.py  distances.py  models.py  tours.py
experiments/: benchmark.py  reporting.py
src/berlin52_ga/: __init__.py  cli.py  operators.py  reporting.py  solver.py  tsplib.py
src/tsp_optimization_lab/: __init__.py  ant_colony.py  benchmark.py  cli.py  cli_options.py  genetic.py  hybrid.py  models.py  nearest.py  operators.py  reporting.py  tours.py  tsplib.py  two_opt.py
tests/: test_ant_colony.py  test_baselines.py  test_benchmark.py  test_genetic.py  test_hybrid.py  test_operators.py  test_solver.py  test_tsplib.py
