[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "berlin52-ga"
version = "0.1.0"
description = "A reproducible genetic algorithm for the TSPLIB Berlin52 problem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
berlin52-ga = "berlin52_ga.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
berlin52_ga = ["data/*.tsp"]
