[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-optimization-lab"
version = "0.5.0"
description = "Reproducible comparison of classical and nature-inspired TSP solvers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
tsp-lab = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["algorithms*", "app*", "core*", "datasets*", "experiments*"]

[tool.setuptools.package-data]
datasets = ["*.tsp"]
